fix(style): tighten extra line spacing for readability
this should allow the user to see more lines without sacrificing too much white-space designating each separate line-slide

--- a/app/frontend/src/Presenter/Line.css
+++ b/app/frontend/src/Presenter/Line.css
@@ -112,3 +112,7 @@
 .line .fade-enter-done {
     opacity: 1;
 }
+
+.next-line + .next-line {
+	padding-top: 0;
+}
